# gpgpu

./: Cargo.toml
grayscale/: Cargo.toml  README.md
grayscale/src/: main.rs
linear-regression/: Cargo.toml  README.md
linear-regression/misc/: cost.txt  plot.py
linear-regression/src/: lib.rs  main.rs
logistic/src/: main.rs
tensors/: Cargo.toml
tensors/src/: main.rs
workflow/: Cargo.toml
workflow/src/: main.rs
