[package]
name = "workflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.3.3" 
candle-datasets = "0.3.3"
candle-nn = "0.3.3"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]